--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,1 +1,4 @@
---- {}
+python/Python-2.7.13.tar.xz:
+  size: 12495628
+  object_id: e3371430-eca9-489e-4656-46d4adc55b34
+  sha: 18a8f30a0356c751b8d0ea6f76e764cab13ee046
