--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -2,3 +2,19 @@ python/Python-2.7.13.tar.xz:
   size: 12495628
   object_id: e3371430-eca9-489e-4656-46d4adc55b34
   sha: 18a8f30a0356c751b8d0ea6f76e764cab13ee046
+python/pip-9.0.1-py2.py3-none-any.whl:
+  size: 1254803
+  object_id: f034b9f1-f13c-48f0-682d-02c530d967a0
+  sha: c70393185d27ae8b49a117e6dcc18bc5f8f3a1c3
+python/setuptools-36.4.0-py2.py3-none-any.whl:
+  size: 478177
+  object_id: b083d67f-5dcd-424f-473b-8a28343e8948
+  sha: f97b5ac95bf202bfb9c0e2e5b4369c28c31d6e82
+python/virtualenv-15.1.0-py2.py3-none-any.whl:
+  size: 1820727
+  object_id: 2f4c4c41-6989-4630-56ea-36c611d3bdf5
+  sha: 0def1fa94de51aa56e24eaefe2173df7249e6ded
+python/wheel-0.29.0-py2.py3-none-any.whl:
+  size: 66878
+  object_id: 3e763e85-54e1-4fed-520b-74599a048d02
+  sha: fcbf015b87179d0ad05eeb1c72282c172e313793
