--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,4 @@ blobstore:
   provider: s3
   options:
     bucket_name: simple-python-flask-app-boshrelease
-final_name: simple-python-flask-app
+final_name: sample-python-flask-app
